Fix jumping photo slideshow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,33 +26,21 @@ p {
   font-family: var(--font-body);
 }
 
-@keyframes fadeUp {
-  from {
-    opacity: 0;
-    transform: translateY(40px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.fade-up {
-  animation: fadeUp 1s ease-out forwards;
-}
-
 /* Photo slideshow */
 @keyframes scroll {
   0% {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(-100%);
   }
 }
-.animate-scroll {
-  animation: scroll 20s linear infinite;
+
+@utility animate-scroll {
+  will-change: transform; /* We should be nice to the browser - let it know what we're going to animate. */
+  animation: scroll 10s linear infinite;
 }
-.animate-scroll:hover {
+
+@utility animate-scroll-paused {
   animation-play-state: paused;
 }
